[gd_scene load_steps=7 format=3 uid="uid://covud210qjlkq"]

[ext_resource type="Texture2D" uid="uid://ryu8hspwpwar" path="res://sprites/menu inicial/BG-claro.png" id="1_cw3ch"]
[ext_resource type="Script" path="res://cenas/menu_inicial.gd" id="1_e8wo1"]
[ext_resource type="Texture2D" uid="uid://c1cofxwkq6ssn" path="res://sprites/menu inicial/bloquinhos.png" id="2_vdajf"]
[ext_resource type="Texture2D" uid="uid://dq8il1oqp5kny" path="res://sprites/menu inicial/title.png" id="3_3l2mr"]
[ext_resource type="Texture2D" uid="uid://dxnxrwxyq6bwt" path="res://sprites/menu inicial/botao.png" id="4_4yrpx"]
[ext_resource type="Texture2D" uid="uid://ci0u5ahwpwluj" path="res://sprites/menu inicial/botao_som.png" id="6_11upx"]

[node name="MenuInicial" type="Node2D"]
position = Vector2(1, 0)
script = ExtResource("1_e8wo1")

[node name="CenterContainer" type="CenterContainer" parent="."]
clip_contents = true
offset_left = -2.0
offset_top = -1.0
offset_right = 1936.0
offset_bottom = 1095.0
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="Bg-claro" type="Sprite2D" parent="CenterContainer"]
position = Vector2(964.5, 546)
scale = Vector2(1.34792, 1.07227)
texture = ExtResource("1_cw3ch")

[node name="Bloquinhos" type="Sprite2D" parent="CenterContainer"]
position = Vector2(644, 471)
scale = Vector2(0.917757, 0.917757)
texture = ExtResource("2_vdajf")

[node name="Title" type="Sprite2D" parent="CenterContainer"]
position = Vector2(906.463, 451.25)
scale = Vector2(1.13092, 1.13092)
texture = ExtResource("3_3l2mr")

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 576.0
offset_top = 605.0
offset_right = 1382.0
offset_bottom = 699.0
theme_override_font_sizes/font_size = 28
placeholder_text = "Digite seu nome para jogar"
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = 580.0
offset_top = 709.0
offset_right = 1384.0
offset_bottom = 760.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Botao" type="Sprite2D" parent="."]
position = Vector2(963, 830)
scale = Vector2(1.11918, 1.11918)
texture = ExtResource("4_4yrpx")

[node name="TextureButton" type="TextureButton" parent="Botao"]
offset_left = -166.0
offset_top = -45.0
offset_right = 169.0
offset_bottom = 47.0
mouse_default_cursor_shape = 2
metadata/_edit_use_anchors_ = true

[node name="BotaoSom" type="Sprite2D" parent="."]
position = Vector2(1802, 85)
texture = ExtResource("6_11upx")

[node name="TextureButton" type="TextureButton" parent="BotaoSom"]
offset_left = -55.0
offset_top = -54.0
offset_right = 55.0
offset_bottom = 54.0
mouse_default_cursor_shape = 2
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Botao/TextureButton" to="." method="_on_inicia_button_pressed"]
[connection signal="pressed" from="BotaoSom/TextureButton" to="." method="_on_som_button_pressed"]
